# .github

./: .gitignore  Anchor.toml  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: checks.yml  deploy.yml  security.yml
app/: layout.tsx  not-found.tsx  page.tsx
app/components/: allocation.tsx  button.tsx  connect.tsx  content.tsx  details.tsx  donut.tsx  font.tsx  footer.tsx  front.tsx  header.tsx  list.tsx  provider.tsx  spinner.tsx
app/form/: bigint.tsx  checkbox.tsx  choice.tsx  field.tsx  index.tsx  info.tsx  number.tsx  pubkey.tsx  radiobox.tsx  text.tsx
app/hooks/: allocations.tsx  (+15 more)
cli/: address.ts  deploy.ts  index.ts  initialize.ts  keypair.ts  signature.ts  token.ts  upload.ts
core/: account.ts  address.ts  allocation.ts  ansi.ts  array.ts  cache.ts  cluster.ts  coder.ts  env.ts  execute.ts  fee.ts  fetch.ts  instruction.ts  interval.ts  irys.ts  key.ts  link.ts  meta.ts  nft.ts  number.ts  price.ts  prompt.ts  round.ts  sign.ts  string.ts  time.ts  token.ts  transaction.ts
profile/: README.md
programs/jewl/: Cargo.toml
programs/jewl/src/: lib.rs
programs/jewl/src/instructions/: decrease_allocation.rs  exercise_allocation.rs  increase_allocation.rs  initialize_allocation.rs  initialize_fee.rs  mod.rs  withdraw_fee.rs
programs/jewl/src/state/: allocation.rs  fee.rs  mod.rs
programs/jewl/src/utility/: cpi.rs  error.rs  mod.rs  security.rs  signer.rs
public/: manifest.json
(+39 files in other folders)
